--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -38,17 +38,20 @@
   align-items: center;
   font-size: 2em;
   margin: 16px 0;
+  padding: 0 16px;
   gap: 8px;
 }
 
 .header-title-badge {
   width: 2.5em;
   height: 2.5em;
+  flex-shrink: 0;
 }
 
 .main {
   width: 100%;
-  max-width: 1100px;
+  max-width: 1132px;
+  padding: 0 16px;
   margin: 0 auto;
 }
 
@@ -62,11 +65,7 @@
 
   margin-top: auto;
   margin-bottom: 16px;
-}
-
-.footer-quote {
-  display: flex;
-  gap: 4px;
+  padding: 32px 16px 0;
 }
 
 .footer-quote-text {
@@ -77,7 +76,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: auto;
   gap: 8px;
 }
 
@@ -89,11 +87,18 @@
   margin-top: 2px;
 }
 
-.footer-copyreich {
+.footer-legal {
   font-size: 0.75em;
 }
 
 /* Shared layout stuff */
+@media (min-width: 850px) {
+  .flex-lg {
+    display: flex;
+    gap: 8px;
+  }
+}
+
 .flex {
   display: flex;
   gap: 8px;
