--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 Cynthia Rey, All rights reserved.
+ * Copyright (c) Cynthia Rey, All rights reserved.
  * SPDX-License-Identifier: BSD-3-Clause
  *
  * Redistribution and use in source and binary forms, with or without
@@ -27,79 +27,80 @@
  */
 
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 32px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 32px;
 }
 
 .header-title {
-  display: flex;
-  align-items: center;
-  font-size: 2em;
-  margin: 16px 0;
-  padding: 0 16px;
-  gap: 8px;
+	display: flex;
+	align-items: center;
+	font-size: 2em;
+	margin: 16px 0;
+	padding: 0 16px;
+	gap: 8px;
 }
 
 .header-title-badge {
-  width: 2.5em;
-  height: 2.5em;
-  flex-shrink: 0;
+	width: 2.5em;
+	height: 2.5em;
+	flex-shrink: 0;
 }
 
 .main {
-  width: 100%;
-  max-width: 1132px;
-  padding: 0 16px;
-  margin: 0 auto;
+	width: 100%;
+	max-width: 1132px;
+	padding: 0 16px;
+	margin: 0 auto;
 }
 
 .footer {
-  display: flex;
-  font-size: 0.9em;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
+	display: flex;
+	font-size: 0.9em;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 6px;
 
-  margin-top: auto;
-  margin-bottom: 16px;
-  padding: 32px 16px 0;
+	margin-top: auto;
+	margin-bottom: 16px;
+	padding: 32px 16px 0;
 }
 
 .footer-quote-text {
-  font-style: italic;
+	font-style: italic;
 }
 
 .footer-links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 8px;
 }
 
 .footer-links .separator {
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background-color: var(--text-color);
-  margin-top: 2px;
+	width: 3px;
+	height: 3px;
+	border-radius: 50%;
+	background-color: var(--text-color);
+	margin-top: 2px;
 }
 
 .footer-legal {
-  font-size: 0.75em;
+	font-size: 0.75em;
+	text-align: center;
 }
 
 /* Shared layout stuff */
 @media (min-width: 850px) {
-  .flex-lg {
-    display: flex;
-    gap: 8px;
-  }
+	.flex-lg {
+		display: flex;
+		gap: 8px;
+	}
 }
 
 .flex {
-  display: flex;
-  gap: 8px;
+	display: flex;
+	gap: 8px;
 }
