--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 Cynthia Rey, All rights reserved.
+ * Copyright (c) Cynthia Rey, All rights reserved.
  * SPDX-License-Identifier: BSD-3-Clause
  *
  * Redistribution and use in source and binary forms, with or without
@@ -32,85 +32,85 @@
 h1, h2, h3, h4, h5, h6, p { margin: 0 }
 
 html, body {
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 
-  font-family: 'Lexend', sans-serif;
-  background: var(--background-color);
-  color: var(--text-color);
-  width: 100%;
-  height: 100%;
+	font-family: 'Lexend', sans-serif;
+	background: var(--background-color);
+	color: var(--text-color);
+	width: 100%;
+	height: 100%;
 }
 
 a {
-  color: inherit;
+	color: inherit;
 }
 
 button {
-  appearance: none;
-  background: var(--badge-color);
-  border: 0;
-  border-radius: 4px;
-  outline: none;
-  box-shadow: none;
-  color: var(--background-color);
-  font: inherit;
-  padding: 8px 16px;
-  cursor: pointer;
-  transition: filter .3s;
+	appearance: none;
+	background: var(--badge-color);
+	border: 0;
+	border-radius: 4px;
+	outline: none;
+	box-shadow: none;
+	color: var(--background-color);
+	font: inherit;
+	padding: 8px 16px;
+	cursor: pointer;
+	transition: filter .3s;
 }
 
 button:hover {
-  filter: brightness(.85);
+	filter: brightness(.85);
 }
 
 button:disabled {
-  cursor: not-allowed;
-  opacity: .6;
+	cursor: not-allowed;
+	opacity: .6;
 }
 
 hr {
-  margin: 32px 0;
-  border: 0;
-  height: 1px;
-  background-color: var(--text-color);
+	margin: 32px 0;
+	border: 0;
+	height: 1px;
+	background-color: var(--text-color);
 }
 
 code {
-  font-family: 'JetBrains Mono', monospace;
-  font-size: .85em;
+	font-family: 'JetBrains Mono', monospace;
+	font-size: .85em;
 }
 
 #app {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
 }
 
 .page-title {
-  font-size: 1.75em;
-  font-weight: bold;
-  margin-bottom: 24px;
+	font-size: 1.75em;
+	font-weight: bold;
+	margin-bottom: 24px;
 }
 
 .page-paragraph {
-  margin-bottom: 16px;
+	margin-bottom: 16px;
 }
 
 .nojs {
-  margin: 32px;
-  max-width: 600px;
+	margin: 32px;
+	max-width: 600px;
 }
 
 :root {
-  --background-color: #fff;
-  --text-color: #000;
-  --badge-color: #2EA967;
+	--background-color: #fff;
+	--text-color: #000;
+	--badge-color: #2EA967;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background-color: #1b1b1b;
-    --text-color: #ccc;
-  }
+	:root {
+		--background-color: #1b1b1b;
+		--text-color: #ccc;
+	}
 }
